# debug

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fmt.cmake  setup.cmake
.github/workflows/: cmake.yml
Example/: CMakeLists.txt  defines.h  main.cpp
Inc/: debugio.h  memory.hpp  ostream.hpp  string_conv.hpp
Inc/fmt/: concepts.hpp  container.hpp  memory.hpp  ostream.hpp  ostream.inl  stdout.h  string_conv.hpp  string_conv.inl
Inc/private/fmt/: floating_point.hpp  floating_point.inl  format_options.hpp  formatted_writer.hpp  instanciate_template.hpp  log2.hpp  math.hpp  string_conv_buffer.hpp  va_list.hpp
Inc/public/fmt/: container.hpp  container.inl  container_type_traits.hpp  extended_types.h  fmt.h  ostream.hpp  ostream.inl  stdout.h  string_conv.hpp  type_traits.hpp
Src/: debugio.cpp  format_options.cpp  format_options.hpp  formatted_writer.cpp  formatted_writer.hpp  instanciate_template.hpp  ostream.cpp  stdout.cpp  string_conv.cpp  string_conv_float.cpp  string_conv_int.cpp
